Fix z-index of modal

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -10462,7 +10462,7 @@ a.link-from{
 .modal-beta {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 3; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
